ffi/include/rfe.h


typedef enum Result {
  RESULT_SUCCESS = 0,
  RESULT_INCOMPATIBLE_FIRMWARE_ERROR,
  RESULT_INVALID_INPUT_ERROR,
  RESULT_INVALID_OPERATION_ERROR,
  RESULT_IO_ERROR,
  RESULT_NO_DATA,
  RESULT_NULL_PTR_ERROR,
  RESULT_TIMEOUT_ERROR,
} Result;
typedef uint8_t SpectrumAnalyzerModel;
typedef uint8_t DspMode;
typedef uint8_t TrackingStatus;
typedef uint8_t InputStage;
typedef uint8_t WifiBand;
typedef struct ScreenData ScreenData;
typedef struct SignalGenerator SignalGenerator;
typedef struct SpectrumAnalyzer SpectrumAnalyzer;
typedef struct SignalGeneratorConfig {
  uint64_t start_hz;
  uint64_t cw_hz;
  uint32_t total_steps;
  uint64_t step_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  uint16_t sweep_power_steps;
  Attenuation start_attenuation;
  PowerLevel start_power_level;
  Attenuation stop_attenuation;
  PowerLevel stop_power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfig;
typedef struct SignalGeneratorConfigAmpSweep {
  uint64_t cw_hz;
  uint16_t sweep_power_steps;
  Attenuation start_attenuation;
  PowerLevel start_power_level;
  Attenuation stop_attenuation;
  PowerLevel stop_power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigAmpSweep;
typedef struct SignalGeneratorConfigCw {
  uint64_t cw_hz;
  uint32_t total_steps;
  uint64_t step_freq_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  RfPower rf_power;
} SignalGeneratorConfigCw;
typedef struct SignalGeneratorConfigFreqSweep {
  uint64_t start_hz;
  uint32_t total_steps;
  uint64_t step_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigFreqSweep;
typedef struct SpectrumAnalyzerConfig {
  uint64_t start_freq_hz;
  uint64_t step_size_hz;
  uint64_t stop_freq_hz;
  uint64_t center_freq_hz;
  uint64_t span_hz;
  int16_t max_amp_dbm;
  int16_t min_amp_dbm;
  uint16_t sweep_len;
  bool is_expansion_radio_module_active;
  Mode mode;
  uint64_t min_freq_hz;
  uint64_t max_freq_hz;
  uint64_t max_span_hz;
  uint64_t rbw_hz;
  int8_t amp_offset_db;
  CalcMode calc_mode;
} SpectrumAnalyzerConfig;
void rfe_screen_data_free(struct ScreenData *screen_data);
void rfe_signal_generator_set_config_callback(const struct SignalGenerator *rfe,
                                              void (*callback)(struct SignalGeneratorConfig config,
                                                               void *user_data),
                                              void *user_data);
void rfe_signal_generator_set_config_amp_sweep_callback(const struct SignalGenerator *rfe,
                                                        void (*callback)(struct SignalGeneratorConfigAmpSweep config,
                                                                         void *user_data),
                                                        void *user_data);
void rfe_signal_generator_set_config_cw_callback(const struct SignalGenerator *rfe,
                                                 void (*callback)(struct SignalGeneratorConfigCw config,
                                                                  void *user_data),
                                                 void *user_data);
void rfe_signal_generator_set_config_freq_sweep_callback(const struct SignalGenerator *rfe,
                                                         void (*callback)(struct SignalGeneratorConfigFreqSweep config,
                                                                          void *user_data),
                                                         void *user_data);
enum Result rfe_spectrum_analyzer_sweep(const struct SpectrumAnalyzer *rfe,
                                        float *sweep_buf,
                                        uintptr_t buf_len,
                                        uintptr_t *sweep_len);
enum Result rfe_spectrum_analyzer_wait_for_next_sweep(const struct SpectrumAnalyzer *rfe,
                                                      float *sweep_buf,
                                                      uintptr_t buf_len,
                                                      uintptr_t *sweep_len);
enum Result rfe_spectrum_analyzer_wait_for_next_sweep_with_timeout(const struct SpectrumAnalyzer *rfe,
                                                                   uint64_t timeout_secs,
                                                                   float *sweep_buf,
                                                                   uintptr_t buf_len,
                                                                   uintptr_t *sweep_len);
enum Result rfe_spectrum_analyzer_screen_data(const struct SpectrumAnalyzer *rfe,
                                              const struct ScreenData **screen_data);
enum Result rfe_spectrum_analyzer_wait_for_next_screen_data(const struct SpectrumAnalyzer *rfe,
                                                            const struct ScreenData **screen_data);
enum Result rfe_spectrum_analyzer_wait_for_next_screen_data_with_timeout(const struct SpectrumAnalyzer *rfe,
                                                                         uint64_t timeout_secs,
                                                                         const struct ScreenData **screen_data);
enum Result rfe_spectrum_analyzer_dsp_mode(const struct SpectrumAnalyzer *rfe, DspMode *dsp_mode);
enum Result rfe_spectrum_analyzer_tracking_status(const struct SpectrumAnalyzer *rfe,
                                                  TrackingStatus *tracking_status);
enum Result rfe_spectrum_analyzer_input_stage(const struct SpectrumAnalyzer *rfe,
                                              InputStage *input_stage);
SpectrumAnalyzerModel rfe_spectrum_analyzer_main_radio_model(const struct SpectrumAnalyzer *rfe);
SpectrumAnalyzerModel rfe_spectrum_analyzer_expansion_radio_model(const struct SpectrumAnalyzer *rfe);
SpectrumAnalyzerModel rfe_spectrum_analyzer_active_radio_model(const struct SpectrumAnalyzer *rfe);
SpectrumAnalyzerModel rfe_spectrum_analyzer_inactive_radio_model(const struct SpectrumAnalyzer *rfe);
enum Result rfe_spectrum_analyzer_start_wifi_analyzer(const struct SpectrumAnalyzer *rfe,
                                                      WifiBand wifi_band);
enum Result rfe_spectrum_analyzer_stop_wifi_analyzer(const struct SpectrumAnalyzer *rfe);
enum Result rfe_spectrum_analyzer_request_tracking(const struct SpectrumAnalyzer *rfe,
                                                   uint64_t start_hz,
                                                   uint64_t step_hz);
enum Result rfe_spectrum_analyzer_tracking_step(const struct SpectrumAnalyzer *rfe, uint16_t step);
enum Result rfe_spectrum_analyzer_set_start_stop(const struct SpectrumAnalyzer *rfe,
                                                 uint64_t start_hz,
                                                 uint64_t stop_hz);
enum Result rfe_spectrum_analyzer_set_start_stop_sweep_len(const struct SpectrumAnalyzer *rfe,
                                                           uint64_t start_hz,
                                                           uint64_t stop_hz,
                                                           uint16_t sweep_len);
enum Result rfe_spectrum_analyzer_set_center_span(const struct SpectrumAnalyzer *rfe,
                                                  uint64_t center_hz,
                                                  uint64_t span_hz);
enum Result rfe_spectrum_analyzer_set_center_span_sweep_len(const struct SpectrumAnalyzer *rfe,
                                                            uint64_t center_hz,
                                                            uint64_t span_hz,
                                                            uint16_t sweep_len);
enum Result rfe_spectrum_analyzer_set_min_max_amps(const struct SpectrumAnalyzer *rfe,
                                                   int16_t min_amp_dbm,
                                                   int16_t max_amp_dbm);
void rfe_spectrum_analyzer_set_sweep_callback(const struct SpectrumAnalyzer *rfe,
                                              void (*callback)(const float *sweep,
                                                               uintptr_t sweep_len,
                                                               uint64_t start_hz,
                                                               uint64_t stop_hz,
                                                               void *user_data),
                                              void *user_data);
void rfe_spectrum_analyzer_set_config_callback(const struct SpectrumAnalyzer *rfe,
                                               void (*callback)(struct SpectrumAnalyzerConfig config,
                                                                void *user_data),
                                               void *user_data);