ffi/include/NativeMethods.g.cs


        /// <summary>
        ///  Copies the most recent sweep into a caller-provided buffer.
        ///
        ///  `sweep_buf` must point to at least `buf_len` `float` values. If `sweep_len`
        ///  is non-NULL, it is set to the number of values written. Returns
        ///  `RESULT_INVALID_INPUT_ERROR` if the buffer is too small, or `RESULT_NO_DATA`
        ///  if no sweep has been received.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_sweep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_sweep(SpectrumAnalyzer* rfe, float* sweep_buf, nuint buf_len, nuint* sweep_len);

        /// <summary>
        ///  Waits for the next sweep and copies it into a caller-provided buffer.
        ///
        ///  `sweep_buf` must point to at least `buf_len` `float` values. If `sweep_len`
        ///  is non-NULL, it is set to the number of values written.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_wait_for_next_sweep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_wait_for_next_sweep(SpectrumAnalyzer* rfe, float* sweep_buf, nuint buf_len, nuint* sweep_len);

        /// <summary>
        ///  Waits up to `timeout_secs` seconds for the next sweep and copies it into a buffer.
        ///
        ///  `sweep_buf` must point to at least `buf_len` `float` values. If `sweep_len`
        ///  is non-NULL, it is set to the number of values written.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_wait_for_next_sweep_with_timeout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_wait_for_next_sweep_with_timeout(SpectrumAnalyzer* rfe, ulong timeout_secs, float* sweep_buf, nuint buf_len, nuint* sweep_len);

        /// <summary>
        ///  Returns the most recent LCD screen capture.
        ///
        ///  On success, `screen_data` receives a heap-allocated `ScreenData` pointer
        ///  owned by the caller. Free it with `rfe_screen_data_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_screen_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_screen_data(SpectrumAnalyzer* rfe, ScreenData** screen_data);

        /// <summary>
        ///  Waits for the next LCD screen capture.
        ///
        ///  On success, `screen_data` receives a heap-allocated `ScreenData` pointer
        ///  owned by the caller. Free it with `rfe_screen_data_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_wait_for_next_screen_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_wait_for_next_screen_data(SpectrumAnalyzer* rfe, ScreenData** screen_data);

        /// <summary>
        ///  Waits up to `timeout_secs` seconds for the next LCD screen capture.
        ///
        ///  On success, `screen_data` receives a heap-allocated `ScreenData` pointer
        ///  owned by the caller. Free it with `rfe_screen_data_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_wait_for_next_screen_data_with_timeout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_wait_for_next_screen_data_with_timeout(SpectrumAnalyzer* rfe, ulong timeout_secs, ScreenData** screen_data);

        /// <summary>
        ///  Writes the current DSP mode to `dsp_mode`.
        ///
        ///  Returns `RESULT_NO_DATA` if the device has not reported a DSP mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_dsp_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_dsp_mode(SpectrumAnalyzer* rfe, DspMode* dsp_mode);

        /// <summary>
        ///  Writes the current tracking status to `tracking_status`.
        ///
        ///  Returns `RESULT_NO_DATA` if the device has not reported a tracking status.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_tracking_status", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_tracking_status(SpectrumAnalyzer* rfe, TrackingStatus* tracking_status);

        /// <summary>
        ///  Writes the current input stage to `input_stage`.
        ///
        ///  Returns `RESULT_NO_DATA` if the device has not reported an input stage.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_input_stage", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_input_stage(SpectrumAnalyzer* rfe, InputStage* input_stage);

        /// <summary>
        ///  Returns the main radio module model.
        ///
        ///  Returns `SPECTRUM_ANALYZER_MODEL_UNKNOWN` if no model has been reported.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_main_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SpectrumAnalyzerModel rfe_spectrum_analyzer_main_radio_model(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the expansion radio module model.
        ///
        ///  Returns `SPECTRUM_ANALYZER_MODEL_UNKNOWN` if no expansion model has been reported.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_expansion_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SpectrumAnalyzerModel rfe_spectrum_analyzer_expansion_radio_model(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the currently active radio module model.
        ///
        ///  Returns `SPECTRUM_ANALYZER_MODEL_UNKNOWN` if no model has been reported.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_active_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SpectrumAnalyzerModel rfe_spectrum_analyzer_active_radio_model(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Returns the currently inactive radio module model.
        ///
        ///  Returns `SPECTRUM_ANALYZER_MODEL_UNKNOWN` if no inactive model exists.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_inactive_radio_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SpectrumAnalyzerModel rfe_spectrum_analyzer_inactive_radio_model(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Starts Wi-Fi analyzer mode for the requested Wi-Fi band.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_start_wifi_analyzer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_start_wifi_analyzer(SpectrumAnalyzer* rfe, WifiBand wifi_band);

        /// <summary>
        ///  Stops Wi-Fi analyzer mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_stop_wifi_analyzer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_stop_wifi_analyzer(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Requests tracking mode and waits for a tracking status response.
        ///
        ///  `start_hz` is the tracking start frequency in hertz and `step_hz` is the
        ///  tracking step frequency in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_request_tracking", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_request_tracking(SpectrumAnalyzer* rfe, ulong start_hz, ulong step_hz);

        /// <summary>
        ///  Steps over the tracking step frequency and makes a measurement.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_tracking_step", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_tracking_step(SpectrumAnalyzer* rfe, ushort step);

        /// <summary>
        ///  Sets the sweep start and stop frequencies in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_start_stop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_start_stop(SpectrumAnalyzer* rfe, ulong start_hz, ulong stop_hz);

        /// <summary>
        ///  Sets the sweep start frequency, stop frequency, and number of sweep points.
        ///
        ///  Frequencies are represented in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_start_stop_sweep_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_start_stop_sweep_len(SpectrumAnalyzer* rfe, ulong start_hz, ulong stop_hz, ushort sweep_len);

        /// <summary>
        ///  Sets the sweep center frequency and span in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_center_span", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_center_span(SpectrumAnalyzer* rfe, ulong center_hz, ulong span_hz);

        /// <summary>
        ///  Sets the sweep center frequency, span, and number of sweep points.
        ///
        ///  Frequencies are represented in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_center_span_sweep_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_center_span_sweep_len(SpectrumAnalyzer* rfe, ulong center_hz, ulong span_hz, ushort sweep_len);

        /// <summary>
        ///  Sets the minimum and maximum amplitudes displayed on the RF Explorer screen.
        ///
        ///  Amplitudes are represented in dBm.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_min_max_amps", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_set_min_max_amps(SpectrumAnalyzer* rfe, short min_amp_dbm, short max_amp_dbm);

        /// <summary>
        ///  Sets the callback called when a sweep is received.
        ///
        ///  The callback may be invoked from a background thread, and multiple callback
        ///  invocations may overlap. The `sweep` pointer passed to the callback is only
        ///  valid for the duration of that callback call. `user_data`, if non-NULL, must
        ///  remain valid until the callback is removed or the analyzer is freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_set_sweep_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_spectrum_analyzer_set_sweep_callback(SpectrumAnalyzer* rfe, delegate* unmanaged[Cdecl]<float*, nuint, ulong, ulong, void*, void> callback, void* user_data);
